 - Changed table date format to be smaller
 - Added Inter font, using in appbar
 - Added Indigo logo in appbar

0.2.0 (Apples testing) - Rating class additions (26/01/23)
  - Added description dropdown
  - Added Rating 'uuid' and 'timestamp' fields

0.2.1 - Backward Compatibility (XX/XX/XX)
  - Changed description to type
  - Added version code to json file
    - Applying compatibility measures from versions <= 0.2.0
  - Added local backups (per 7 days)
  - Added deletion double-check

===== PLANNED =====

0.2.1 - backward compatibility
  - Add description entry box
  - Start date picker week on monday
  - Caps text input
  - Ellipsis on details tab

0.2.2 - code organisation
  - Make the Dialog box a class, with a show() method and get() methods for retrieving the current values in the add method
    - Inputs
      - Header (text)
      - Body 1 (column of widgets)
      - Body 2 (input rows)
      - Buttons (row of buttons)
      - List of names of return values to put in dict (equal length to body 2)
    - Return dict
      - Use Future and await the dialog function call
    - Make main column centered and minimum size to reduce dialog size
    - Make body elements scrollable to remove clipping error
  - Move Ratings table into UI, have main be only main stuff
  - Fix possible async issue
  - Do other TODOs

0.3.0 - saving/syncing data
 - Import/export
 - Gdrive

0.4.0 - imdb
  - Auto add description mentioning import from (etc.) imdb

0.5.0 - analytics

0.6.0 - settings

1.0.0 - full
 - all platforms (Apple development requires investment)

PLAN - (non-urgent) implement at some point
 - Reduce outside padding of table
 -? Make app icon circle
 - Make intro/splash screen
 -? Change font of rest of app
 -? Have something show when logo is clicked
 - Custom descriptions that save for future

BUGS - (non-urgent) fix at some point
 - Date picker selection requires reloading of dialog box
 - Keyboard showing makes dialog box background shrink