@@ -6,6 +6,10 @@
 
 #include "generated_plugin_registrant.h"
 
+#include <desktop_window/desktop_window_plugin.h>
 
 void fl_register_plugins(FlPluginRegistry* registry) {
+  g_autoptr(FlPluginRegistrar) desktop_window_registrar =
+      fl_plugin_registry_get_registrar_for_plugin(registry, "DesktopWindowPlugin");
+  desktop_window_plugin_register_with_registrar(desktop_window_registrar);
 }
