@@ -47,6 +47,7 @@ dependencies:
   data_table_2: ^2.3.10
   logger: ^1.1.0
   package_info_plus: ^3.0.2
+  desktop_window: ^0.4.0
 
 dev_dependencies:
   flutter_test:
